--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(gdb) Launch with args", // Change name
+      "name": "(gdb) List Driver", // Change name
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/bin/main", // THIS IS IMPORTANT
-      "args": ["64.59.225.81", "/chadd/cs360f21/LabHttp.html"], // add comma separated list of args here.
+      "program": "${workspaceFolder}/ListADT/bin/lstdriver", // THIS IS IMPORTANT
+      "args": [], // add comma separated list of args here.
       "stopAtEntry":  true, // THIS IS IMPORTANT 
-      "cwd": "${workspaceFolder}",
+      "cwd": "${workspaceFolder}/ListADT", // THIS MUST BE THE PROJECT DIRECTORY!
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
@@ -23,26 +23,11 @@
           }
       ],
       "preLaunchTask": "runMake", // THIS IS IMPORTANT
-    },
-    {
-      "name": "(gdb) Launch",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${workspaceFolder}/bin/main", // THIS IS IMPORTANT
-      "args": [],
-      "stopAtEntry": true, // THIS IS IMPORTANT 
-      "cwd": "${workspaceFolder}",  
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ],
-      "preLaunchTask": "runMake", // THIS IS IMPORTANT
     }
+
+    // COPY, PASTE, and EDIT the above for each driver!
+    // customize:
+    //    "name", "program", "cwd"
+    // set "args" if the executable takes command line arguments
   ]
 }
