--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(gdb) List Driver", // Change name
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/ListADT/bin/lstdriver", // THIS IS IMPORTANT
+      "program": "${workspaceFolder}/ListADT/bin/listdriverpublic", // THIS IS IMPORTANT
       "args": [], // add comma separated list of args here.
       "stopAtEntry":  true, // THIS IS IMPORTANT 
       "cwd": "${workspaceFolder}/ListADT", // THIS MUST BE THE PROJECT DIRECTORY!
